# poetry-stickywheel-plugin

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml
src/: poetry_stickywheel_plugin.py
tests/: test_poetry_stickywheel_plugin.py
tests/config_files/: default.toml  exact.toml  invalid.toml  minimum.toml  semver.toml
